--- a/HUMANITIES/For Humanites lec49 English Language_corrected.htm
+++ b/HUMANITIES/For Humanites lec49 English Language_corrected.htm
@@ -1,1 +1,278 @@
-<p class="MsoNormal" align="center" style="margin-bottom:0in;text-align:center;line-height:normal"><strong><span style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,serif">EnglishLanguage for Competitive Exams</span></strong></p><p class="MsoNormal" align="center" style="margin-bottom:0in;text-align:center;line-height:normal"><strong><span style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,serif">By</span></strong></p><p class="MsoNormal" align="center" style="margin-bottom:0in;text-align:center;line-height:normal"><strong><span style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,serif">Prof.Aysha Iqbal</span></strong></p><p class="MsoNormal" align="center" style="margin-bottom:0in;text-align:center;line-height:normal"><strong><span style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,serif">Departmentof Humanities and Social Sciences</span></strong></p><p class="MsoNormal" align="center" style="margin-bottom:0in;text-align:center;line-height:normal"><strong><span style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,serif">IndianInstitute of Technology, Madras</span></strong></p><p class="MsoNormal" align="center" style="margin-bottom:0in;text-align:center;line-height:normal"><strong><span style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,serif"><br>Week - 10</span></strong></p><p class="MsoNormal" align="center" style="margin-bottom:0in;text-align:center;line-height:normal"><strong><span style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,serif">Lecture- 49</span></strong></p><p class="MsoNormal" align="center" style="margin-bottom:0in;text-align:center;line-height:normal"><strong><span style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,serif">Grammar- Part 5</span></strong></p><p class="MsoNormal" align="center" style="margin-bottom:0in;text-align:center;line-height:normal"><strong><span style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,serif">Modifiers&amp; Active voice, Passive voice</span></strong></p><p class="MsoNormal" align="center" style="margin-bottom:0in;text-align:center;line-height:normal"><span style="font-size:12.0pt;font-family:&quot;Times New Roman&quot;,serif">&nbsp;</span></p><p class="MsoNormal" style="margin-top:12.0pt;margin-right:0in;margin-bottom:12.0pt;margin-left:0in;text-align:justify;line-height:150%">Greetingsto all,</p><p class="MsoNormal" style="margin-top:12.0pt;margin-right:0in;margin-bottom:12.0pt;margin-left:0in;text-align:justify;line-height:150%">So,we will continue with various aspects of Grammar., First aspect is modifiersand another is Voice i.e. Active and Passive Voice. This is something all ofyou must have learnt at your school. Modifiers are important to understandespecially to make correct sentences in English Language required for ,competitiveexams. Similarly, Voice is also important because the way you write and how youuse the Active and Passive voices is also extremely important. </p><p class="MsoNormal" style="margin-top:12.0pt;margin-right:0in;margin-bottom:12.0pt;margin-left:0in;text-align:justify;line-height:150%">Beforemaking all these presentations before you, I have consulted a couple of verygood websites, particularly grammarly.com and other websites on the net; which speciallypertain, to Grammar. I would suggest that you also keep looking up these sites forfurther better understanding of English Grammar. You also have Martin Hewingsbook, Advanced English Grammar and More Basics. Please refer to Brandon Martinwithout any hesitation and doubt. So, coming back ato what we are doing, amodifier changes or clarifies or adds particular phrase. For example, asentence like , ,Poor Geeta, ,a single mom with three infants has to work attwo jobs.,</p><p class="MsoNormal" style="margin-top:12.0pt;margin-right:0in;margin-bottom:12.0pt;margin-left:0in;text-align:justify;line-height:150%">Nowsingle mom with three infants becomes your modifier or qualifier. It adds,clarifies and limits a particular word in a sentence in order to give some description.Modifiers need or tend to be descriptive words. ,So a single mom is a modifierwith three infant children. It is not like ,Poor Geeta ,is working and takingcare of three infants. ,It is not just that you are talking about ,Poor Geeta,,a, single mom. ,All these are qualifiers. </p><p class="MsoNormal" style="margin-top:12.0pt;margin-right:0in;margin-bottom:12.0pt;margin-left:0in;text-align:justify;line-height:150%">Remembermodifiers phrases ,are, such, ,as adjective clause and adverbial phrases existand tend to describe adjectives and adverbs. So, they add value and details of,explanation to all this. In a sentence like poor Geetha, a single mom withthree infant children is working at two jobs. Here,, you have poor as adjectiveand, single mom etc. ,is a clause and three intants are a quantifier. ,Allthese expressions and ,clauses add meaning to the first sentence; that isSheela or Geetha is working.</p><p class="MsoNormal" style="margin-top:12.0pt;margin-right:0in;margin-bottom:12.0pt;margin-left:0in;text-align:justify;line-height:150%">Onlylook at only ,Geetha is working at two jobs,. How unadorned it is. But look atpoor Geetha, ,a single mother of three infants or three infant children isworking at two jobs. Look at how everything is modified. Modifier can beanything, a noun, adjective, a clause or an adverbial phrase. Remember that.Modifier, is the key to make a good elegant and eligible sentence. Further rememberthat ,modifier placement can appear in a variety of ways, but most often, ,itcomes in sentence correction, as I already told you. Dangling modifier andmisplaced modifier are the two categories you have to look at.</p><p class="MsoNormal" style="margin-top:12.0pt;margin-right:0in;margin-bottom:12.0pt;margin-left:0in;text-align:justify;line-height:150%;page-break-after:avoid"><span style="font-size:12.0pt;line-height:150%;font-family:&quot;Times New Roman&quot;,serif">(ReferSlide Time: 04:39)</span></p><div class="se-component se-image-container __se__float-center" contenteditable="false"><figure style="margin: auto;"><img src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/HUMANITIES/For%20Humanites%20lec49%20English%20Language_corrected_files/image001.png?raw=true" alt="" data-rotate="" data-proportion="true" data-rotatex="" data-rotatey="" data-align="center" data-size="," data-percentage="auto,auto" data-file-name="image012.png?raw=true" data-file-size="0" origin-size="384,288" data-origin="," style="" data-index="12"> </figure></div><p class="MsoNormal" style="margin-top:12.0pt;margin-right:0in;margin-bottom:12.0pt;margin-left:0in;text-align:justify;line-height:150%">Sentencesthat include dangling modifiers typically begin with ,an introductory clausethat describes the subject, but they do not name it immediately. They confuse apotential reader.</p>
+<p
+  class="MsoNormal"
+  align="center"
+  style="margin-bottom: 0in; text-align: center; line-height: normal;"
+>
+  <strong
+    ><span style="font-size: 12pt; font-family: 'Times New Roman', serif;"
+      >EnglishLanguage for Competitive Exams</span
+    ></strong
+  >
+</p>
+<p
+  class="MsoNormal"
+  align="center"
+  style="margin-bottom: 0in; text-align: center; line-height: normal;"
+>
+  <strong
+    ><span style="font-size: 12pt; font-family: 'Times New Roman', serif;"
+      >By</span
+    ></strong
+  >
+</p>
+<p
+  class="MsoNormal"
+  align="center"
+  style="margin-bottom: 0in; text-align: center; line-height: normal;"
+>
+  <strong
+    ><span style="font-size: 12pt; font-family: 'Times New Roman', serif;"
+      >Prof.Aysha Iqbal</span
+    ></strong
+  >
+</p>
+<p
+  class="MsoNormal"
+  align="center"
+  style="margin-bottom: 0in; text-align: center; line-height: normal;"
+>
+  <strong
+    ><span style="font-size: 12pt; font-family: 'Times New Roman', serif;"
+      >Departmentof Humanities and Social Sciences</span
+    ></strong
+  >
+</p>
+<p
+  class="MsoNormal"
+  align="center"
+  style="margin-bottom: 0in; text-align: center; line-height: normal;"
+>
+  <strong
+    ><span style="font-size: 12pt; font-family: 'Times New Roman', serif;"
+      >IndianInstitute of Technology, Madras</span
+    ></strong
+  >
+</p>
+<p
+  class="MsoNormal"
+  align="center"
+  style="margin-bottom: 0in; text-align: center; line-height: normal;"
+>
+  <strong
+    ><span style="font-size: 12pt; font-family: 'Times New Roman', serif;"
+      ><br />Week - 10</span
+    ></strong
+  >
+</p>
+<p
+  class="MsoNormal"
+  align="center"
+  style="margin-bottom: 0in; text-align: center; line-height: normal;"
+>
+  <strong
+    ><span style="font-size: 12pt; font-family: 'Times New Roman', serif;"
+      >Lecture- 49</span
+    ></strong
+  >
+</p>
+<p
+  class="MsoNormal"
+  align="center"
+  style="margin-bottom: 0in; text-align: center; line-height: normal;"
+>
+  <strong
+    ><span style="font-size: 12pt; font-family: 'Times New Roman', serif;"
+      >Grammar- Part 5</span
+    ></strong
+  >
+</p>
+<p
+  class="MsoNormal"
+  align="center"
+  style="margin-bottom: 0in; text-align: center; line-height: normal;"
+>
+  <strong
+    ><span style="font-size: 12pt; font-family: 'Times New Roman', serif;"
+      >Modifiers&amp; Active voice, Passive voice</span
+    ></strong
+  >
+</p>
+<p
+  class="MsoNormal"
+  align="center"
+  style="margin-bottom: 0in; text-align: center; line-height: normal;"
+>
+  <span style="font-size: 12pt; font-family: 'Times New Roman', serif;"
+    >&nbsp;</span
+  >
+</p>
+<p
+  class="MsoNormal"
+  style="
+    margin-top: 12pt;
+    margin-right: 0in;
+    margin-bottom: 12pt;
+    margin-left: 0in;
+    text-align: justify;
+    line-height: 150%;
+  "
+>
+  Greetingsto all,
+</p>
+<p
+  class="MsoNormal"
+  style="
+    margin-top: 12pt;
+    margin-right: 0in;
+    margin-bottom: 12pt;
+    margin-left: 0in;
+    text-align: justify;
+    line-height: 150%;
+  "
+>
+  So,we will continue with various aspects of Grammar., First aspect is
+  modifiersand another is Voice i.e. Active and Passive Voice. This is something
+  all ofyou must have learnt at your school. Modifiers are important to
+  understandespecially to make correct sentences in English Language required
+  for ,competitiveexams. Similarly, Voice is also important because the way you
+  write and how youuse the Active and Passive voices is also extremely
+  important.
+</p>
+<p
+  class="MsoNormal"
+  style="
+    margin-top: 12pt;
+    margin-right: 0in;
+    margin-bottom: 12pt;
+    margin-left: 0in;
+    text-align: justify;
+    line-height: 150%;
+  "
+>
+  Beforemaking all these presentations before you, I have consulted a couple of
+  verygood websites, particularly grammarly.com and other websites on the net;
+  which speciallypertain, to Grammar. I would suggest that you also keep looking
+  up these sites forfurther better understanding of English Grammar. You also
+  have Martin Hewingsbook, Advanced English Grammar and More Basics. Please
+  refer to Brandon Martinwithout any hesitation and doubt. So, coming back ato
+  what we are doing, amodifier changes or clarifies or adds particular phrase.
+  For example, asentence like , ,Poor Geeta, ,a single mom with three infants
+  has to work attwo jobs.,
+</p>
+<p
+  class="MsoNormal"
+  style="
+    margin-top: 12pt;
+    margin-right: 0in;
+    margin-bottom: 12pt;
+    margin-left: 0in;
+    text-align: justify;
+    line-height: 150%;
+  "
+>
+  Nowsingle mom with three infants becomes your modifier or qualifier. It
+  adds,clarifies and limits a particular word in a sentence in order to give
+  some description.Modifiers need or tend to be descriptive words. ,So a single
+  mom is a modifierwith three infant children. It is not like ,Poor Geeta ,is
+  working and takingcare of three infants. ,It is not just that you are talking
+  about ,Poor Geeta,,a, single mom. ,All these are qualifiers.
+</p>
+<p
+  class="MsoNormal"
+  style="
+    margin-top: 12pt;
+    margin-right: 0in;
+    margin-bottom: 12pt;
+    margin-left: 0in;
+    text-align: justify;
+    line-height: 150%;
+  "
+>
+  Remembermodifiers phrases ,are, such, ,as adjective clause and adverbial
+  phrases existand tend to describe adjectives and adverbs. So, they add value
+  and details of,explanation to all this. In a sentence like poor Geetha, a
+  single mom withthree infant children is working at two jobs. Here,, you have
+  poor as adjectiveand, single mom etc. ,is a clause and three intants are a
+  quantifier. ,Allthese expressions and ,clauses add meaning to the first
+  sentence; that isSheela or Geetha is working.
+</p>
+<p
+  class="MsoNormal"
+  style="
+    margin-top: 12pt;
+    margin-right: 0in;
+    margin-bottom: 12pt;
+    margin-left: 0in;
+    text-align: justify;
+    line-height: 150%;
+  "
+>
+  Onlylook at only ,Geetha is working at two jobs,. How unadorned it is. But
+  look atpoor Geetha, ,a single mother of three infants or three infant children
+  isworking at two jobs. Look at how everything is modified. Modifier can
+  beanything, a noun, adjective, a clause or an adverbial phrase. Remember
+  that.Modifier, is the key to make a good elegant and eligible sentence.
+  Further rememberthat ,modifier placement can appear in a variety of ways, but
+  most often, ,itcomes in sentence correction, as I already told you. Dangling
+  modifier andmisplaced modifier are the two categories you have to look at.
+</p>
+<p
+  class="MsoNormal"
+  style="
+    margin-top: 12pt;
+    margin-right: 0in;
+    margin-bottom: 12pt;
+    margin-left: 0in;
+    text-align: justify;
+    line-height: 150%;
+    page-break-after: avoid;
+  "
+>
+  <span
+    style="
+      font-size: 12pt;
+      line-height: 150%;
+      font-family: 'Times New Roman', serif;
+    "
+    >(ReferSlide Time: 04:39)</span
+  >
+</p>
+<div
+  class="se-component se-image-container __se__float-center"
+  contenteditable="false"
+>
+  <figure style="margin: auto;">
+    <img
+      src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/HUMANITIES/For%20Humanites%20lec49%20English%20Language_corrected_files/image001.png?raw=true"
+      alt=""
+      data-rotate=""
+      data-proportion="true"
+      data-rotatex=""
+      data-rotatey=""
+      data-align="center"
+      data-size=","
+      data-percentage="auto,auto"
+      data-file-name="image012.png?raw=true"
+      data-file-size="0"
+      origin-size="384,288"
+      data-origin=","
+      style=""
+      data-index="12"
+    />
+  </figure>
+</div>
+<p
+  class="MsoNormal"
+  style="
+    margin-top: 12pt;
+    margin-right: 0in;
+    margin-bottom: 12pt;
+    margin-left: 0in;
+    text-align: justify;
+    line-height: 150%;
+  "
+>
+  Sentencesthat include dangling modifiers typically begin with ,an introductory
+  clausethat describes the subject, but they do not name it immediately. They
+  confuse apotential reader.
+</p>
