--- a/BASIC SCIENCE/language/Bacis science-kannada.htm
+++ b/BASIC SCIENCE/language/Bacis science-kannada.htm
@@ -52,10 +52,31 @@ avoid'><span lang=kn style='font-size:12.0pt;line-height:150%;font-family:"Vrind
 
 <p class=MsoNormal align=center style='margin-top:12.0pt;margin-right:0cm;
 margin-bottom:12.0pt;margin-left:0cm;text-align:center;line-height:150%'><span
-lang=EN-US style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'><img
-width=384 height=288 id="Picture 1"
-src="Bacis%20science-kannada_files/image001.jpg"
-alt=vlcsnap-2015-11-11h34m03s73.png></span></p>
+lang=EN-US style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'><div
+class="se-component se-image-container __se__float-center"
+contenteditable="false"
+>
+<figure style="margin: auto;">
+  <img
+    src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/BASIC%20SCIENCE/1.%20For%20Engineering%20lec1%20Introduction%20to%20Electromagnetism_corrected_files/image001.png?raw=true"
+    alt=""
+    data-rotate=""
+    data-proportion="true"
+    data-rotatex=""
+    data-rotatey=""
+    data-align="center"
+    data-size=","
+    data-percentage="auto,auto"
+    data-file-name="image012.png?raw=true"
+    data-file-size="0"
+    origin-size="384,288"
+    data-origin=","
+    style=""
+    data-index="9"
+  />
+</figure>
+</div>
+</span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0cm;margin-bottom:
 12.0pt;margin-left:0cm;text-align:justify;line-height:150%'><span lang=kn
