--- a/MEATLLURGICAL ENGINEERING AND MATERIAL SCIENCE/language/FUNDAMENTALS OF MATERIAL PROCESSING -tamil.htm
+++ b/MEATLLURGICAL ENGINEERING AND MATERIAL SCIENCE/language/FUNDAMENTALS OF MATERIAL PROCESSING -tamil.htm
@@ -1,64 +1,7 @@
-<html>
-
-<head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
-<meta name=Generator content="Microsoft Word 15 (filtered)">
-<style>
-<!--
- /* Font Definitions */
- @font-face
-	{font-family:Mangal;
-	panose-1:0 0 4 0 0 0 0 0 0 0;}
-@font-face
-	{font-family:"Cambria Math";
-	panose-1:2 4 5 3 5 4 6 3 2 4;}
-@font-face
-	{font-family:Calibri;
-	panose-1:2 15 5 2 2 2 4 3 2 4;}
-@font-face
-	{font-family:Tahoma;
-	panose-1:2 11 6 4 3 5 4 4 2 4;}
-@font-face
-	{font-family:"Segoe Print";
-	panose-1:2 0 6 0 0 0 0 0 0 0;}
- /* Style Definitions */
- p.MsoNormal, li.MsoNormal, div.MsoNormal
-	{margin-top:0cm;
-	margin-right:0cm;
-	margin-bottom:10.0pt;
-	margin-left:0cm;
-	line-height:115%;
-	font-size:11.0pt;
-	font-family:"Calibri",sans-serif;}
-p.Default, li.Default, div.Default
-	{mso-style-name:Default;
-	margin:0cm;
-	text-autospace:none;
-	font-size:12.0pt;
-	font-family:"Times New Roman",serif;
-	color:black;}
-.MsoChpDefault
-	{font-family:"Calibri",sans-serif;}
-.MsoPapDefault
-	{margin-bottom:10.0pt;
-	line-height:115%;}
-@page WordSection1
-	{size:612.0pt 792.0pt;
-	margin:72.0pt 72.0pt 72.0pt 72.0pt;}
-div.WordSection1
-	{page:WordSection1;}
--->
-</style>
-
-</head>
-
-<body lang=EN-IN>
-
-<div class=WordSection1>
 
 <p class=Default align=center style='text-align:center'><b><span lang=ta>&#2990;&#3010;&#2994;&#2986;&#3021;&#2986;&#3018;&#2992;&#3009;&#2995;&#3021;&#2965;&#2995;&#3021;
 &#2970;&#3014;&#2991;&#2994;&#3006;&#2965;&#3021;&#2965;&#2949;&#2975;&#3007;&#2986;&#3021;&#2986;&#2975;&#3016;&#2965;&#2995;&#3021;
-(&#2986;&#2965;&#3009;&#2980;&#3007;–1)</span></b></p>
+(&#2986;&#2965;&#3009;&#2980;&#3007;ï¿½1)</span></b></p>
 
 <p class=Default align=center style='text-align:center'><b><span lang=ta>&#2986;&#3015;&#2992;&#3006;&#2970;&#3007;&#2992;&#3007;&#2991;&#2992;&#3021;
 &#2970;&#2999;&#3006;&#2969;&#3021;&#2965;&#3021;
@@ -216,7 +159,7 @@ lang=ta style='font-size:12.0pt;line-height:150%;font-family:"Mangal",serif'>
 &#2986;&#2980;&#3007;&#2994;&#3021; &#2951;&#2980;&#3009; &#2986;&#3018;&#2980;&#3009;&#2997;&#3006;&#2965;
 50 &#2990;&#3009;&#2980;&#2994;&#3021; 100</span><span lang=ta
 style='font-family:"Mangal",serif'> </span><sup><span lang=ta style='font-size:
-12.0pt;line-height:150%;font-family:"Mangal",serif;color:red'> o</span></sup><span
+12.0pt;line-height:150%;font-family:"Mangal",serif;color:red'>ï¿½o</span></sup><span
 lang=ta style='font-family:"Mangal",serif'>C &#2958;&#2985;&#3021;&#2993;
 &#2997;&#2992;&#3007;&#2970;&#3016;&#2991;&#3007;&#2994;&#3021;</span><span
 lang=ta style='font-size:12.0pt;line-height:150%;font-family:"Mangal",serif;
@@ -245,11 +188,11 @@ style='font-size:12.0pt;line-height:150%;font-family:"Mangal",serif'>
 &#2965;&#3021;&#2965;&#3009;&#2990;&#3021;
 &#2965;&#3009;&#2993;&#3016;&#2997;&#3006;&#2965;</span><span lang=ta
 style='font-family:"Mangal",serif'> </span><span lang=ta style='font-size:12.0pt;
-line-height:150%;font-family:"Mangal",serif;color:red'> </span><span lang=ta
-style='font-family:"Mangal",serif'> </span><span lang=ta style='font-size:12.0pt;
-line-height:150%;font-family:"Mangal",serif;color:red'> </span><span lang=ta
-style='font-family:"Mangal",serif'> </span><span lang=ta style='font-size:12.0pt;
-line-height:150%;font-family:"Mangal",serif'> &#2953;&#2995;&#3021;&#2995;&#2980;&#3009;.
+line-height:150%;font-family:"Mangal",serif;color:red'>ï¿½</span><span lang=ta
+style='font-family:"Mangal",serif'>ï¿½</span><span lang=ta style='font-size:12.0pt;
+line-height:150%;font-family:"Mangal",serif;color:red'>ï¿½</span><span lang=ta
+style='font-family:"Mangal",serif'>ï¿½</span><span lang=ta style='font-size:12.0pt;
+line-height:150%;font-family:"Mangal",serif'>ï¿½&#2953;&#2995;&#3021;&#2995;&#2980;&#3009;.
 &#2958;&#2985;&#2997;&#3015; &#2984;&#3006;&#2990;&#3021;
 &#2986;&#2993;&#3021;&#2993;&#3007;
 &#2986;&#3015;&#2970;&#3009;&#2965;&#3007;&#2993;&#3008;&#2992;&#3021;&#2965;&#2995;&#3021;
@@ -339,7 +282,7 @@ color:red'> %</span><span lang=ta style='font-family:"Mangal",serif'>&#2965;&#30
 &#2950;&#2985;&#3006;&#2994;&#3021;</span><span lang=ta style='font-size:12.0pt;
 line-height:150%;font-family:"Mangal",serif'>&#2949;&#2984;&#3021;&#2980; 10</span><span
 lang=ta style='font-family:"Mangal",serif'> </span><span lang=ta
-style='font-size:12.0pt;line-height:150%;font-family:"Mangal",serif;color:red'> %</span><span
+style='font-size:12.0pt;line-height:150%;font-family:"Mangal",serif;color:red'>ï¿½%</span><span
 lang=ta style='font-family:"Mangal",serif'> &#2997;&#3014;&#2986;&#3021;&#2986;&#2984;&#3007;&#2994;&#3016;
 &#2980;&#3009;&#2995;&#3007; &#2997;&#3014;&#2986;&#3021;&#2986;
 &#2950;&#2993;&#3021;&#2993;&#2994;&#3021; &#2990;&#3007;&#2965;
@@ -381,7 +324,7 @@ lang=ta style='font-size:12.0pt;line-height:150%;font-family:"Mangal",serif'>.
 lang=ta style='font-family:"Mangal",serif'> </span><span lang=ta
 style='font-size:12.0pt;line-height:150%;font-family:"Mangal",serif'><br
 clear=all>
-<span style='color:red'> H + C<sub>+L</sub>T</span></span><span lang=ta
+<span style='color:red'>ï¿½H + C<sub>+L</sub>T</span></span><span lang=ta
 style='font-family:"Mangal",serif'>&#2950;&#2994;&#3021;</span><span lang=ta
 style='font-size:12.0pt;line-height:150%;font-family:"Mangal",serif'>&#2990;&#3006;&#2993;&#3021;&#2993;&#3007;&#2985;&#3006;&#2994;&#3021;,
 &#2984;&#3006;&#2990;&#3021; &#2970;&#3010;&#2986;&#3021;&#2986;&#2992;&#3021;
@@ -391,8 +334,8 @@ style='font-size:12.0pt;line-height:150%;font-family:"Mangal",serif'>&#2990;&#30
 &#2965;&#3018;&#2995;&#3021;&#2995;
 &#2990;&#3009;&#2975;&#3007;&#2991;&#3009;&#2990;&#3021;.</span><span lang=ta
 style='font-family:"Mangal",serif'> </span><span lang=ta style='font-size:12.0pt;
-line-height:150%;font-family:"Mangal",serif'> Since </span><span lang=ta
-style='font-family:"Mangal",serif'> </span><span lang=ta style='font-size:12.0pt;
+line-height:150%;font-family:"Mangal",serif'>ï¿½Since </span><span lang=ta
+style='font-family:"Mangal",serif'>ï¿½</span><span lang=ta style='font-size:12.0pt;
 line-height:150%;font-family:"Mangal",serif'>&#2980;&#3007;&#2992;&#2997;&#2990;&#3006;&#2985;&#2980;&#3009;
 &#2949;&#2980;&#3007;&#2965;
 &#2997;&#3014;&#2986;&#3021;&#2986;&#2984;&#3007;&#2994;&#3016;&#2991;&#3007;&#2994;&#3021;
@@ -407,7 +350,7 @@ line-height:150%;font-family:"Mangal",serif'>&#2980;&#3007;&#2975;&#2990;&#3006;
 &#2997;&#3007;&#2965;&#3007;&#2980;&#2990;&#3021;
 &#2970;&#2993;&#3021;&#2993;&#3009;</span><span lang=ta style='font-family:
 "Mangal",serif'> </span><span lang=ta style='font-size:12.0pt;line-height:150%;
-font-family:"Mangal",serif'> &#2997;&#3007;&#2980;&#3021;&#2980;&#3007;&#2991;&#3006;&#2970;&#2990;&#3006;&#2965;
+font-family:"Mangal",serif'>ï¿½&#2997;&#3007;&#2980;&#3021;&#2980;&#3007;&#2991;&#3006;&#2970;&#2990;&#3006;&#2965;
 </span><span lang=ta style='font-family:"Mangal",serif'>&#2951;&#2992;&#3009;&#2965;&#3021;&#2965;&#2994;&#3006;&#2990;&#3021;
 &#2990;&#2993;&#3021;&#2993;&#3009;&#2990;&#3021; </span><span lang=ta
 style='font-size:12.0pt;line-height:150%;font-family:"Mangal",serif'>&#2990;&#3018;&#2980;&#3021;&#2980;
@@ -418,9 +361,9 @@ style='font-size:12.0pt;line-height:150%;font-family:"Mangal",serif'>&#2990;&#30
 &#2951;&#2992;&#3009;&#2965;&#3021;&#2965;&#2994;&#3006;&#2990;&#3021;.</span><span
 lang=ta style='font-family:"Mangal",serif'> </span><span lang=ta
 style='font-size:12.0pt;line-height:150%;font-family:"Mangal",serif'>, </span><span
-lang=ta style='font-family:"Mangal",serif'> </span><span lang=ta
+lang=ta style='font-family:"Mangal",serif'>ï¿½</span><span lang=ta
 style='font-size:12.0pt;line-height:150%;font-family:"Mangal",serif'>&#2990;&#2993;&#3021;&#2993;&#3009;&#2990;&#3021;
-</span><span lang=ta style='font-family:"Mangal",serif'> </span><span lang=ta
+</span><span lang=ta style='font-family:"Mangal",serif'>ï¿½</span><span lang=ta
 style='font-size:12.0pt;line-height:150%;font-family:"Mangal",serif'>&#2984;&#3007;&#2985;&#3016;&#2997;&#3007;&#2994;&#3021;,</span><span
 lang=ta style='font-family:"Mangal",serif'> </span><span lang=ta
 style='font-size:12.0pt;line-height:150%;font-family:"Mangal",serif'>&#2997;&#3014;&#2986;&#3021;&#2986;&#2984;&#3007;&#2994;&#3016;
@@ -430,8 +373,4 @@ style='font-size:12.0pt;line-height:150%;font-family:"Mangal",serif'>&#2997;&#30
 &#2951;&#2994;&#3021;&#2994;&#3016;, &#2949;&#2980;&#3006;&#2997;&#2980;&#3009;
 &#2949;&#2980;&#3009; &#2990;&#3006;&#2993;&#3021;&#2993;&#2986;&#3021;&#2986;&#2975;&#3006;&#2980;&#3009;.</span></p>
 
-</div>
 
-</body>
-
-</html>
