--- a/MEATLLURGICAL ENGINEERING AND MATERIAL SCIENCE/language/FUNDAMENTALS OF MATERIAL PROCESSING -tamil.htm
+++ b/MEATLLURGICAL ENGINEERING AND MATERIAL SCIENCE/language/FUNDAMENTALS OF MATERIAL PROCESSING -tamil.htm
@@ -111,10 +111,30 @@ line-height:normal'><span lang=ta style='font-size:12.0pt;font-family:"Mangal",s
 05:04)</span></p>
 
 <p class=MsoNormal align=center style='text-align:center;line-height:normal'><span
-style='font-size:12.0pt;font-family:"Times New Roman",serif'><img width=384
-height=288 id="Picture 1"
-src="FUNDAMENTALS%20OF%20MATERIAL%20PROCESSING%20-tamil_files/image001.jpg"
-alt="&#2975;&#3007;:\&#2950;&#2997;&#2979;&#2969;&#3021;&#2965;&#2995;&#3021; &#2990;&#2993;&#3021;&#2993;&#3009;&#2990;&#3021; &#2949;&#2990;&#3016;&#2986;&#3021;&#2986;&#3009;&#2965;&#2995;&#3021; \ASD\&#2958;&#2985;&#3021; &#2950;&#2997;&#2979;&#2969;&#3021;&#2965;&#2995;&#3021;\&#2958;&#2985;&#3021; &#2986;&#2975;&#2969;&#3021;&#2965;&#2995;&#3021;\vlcsnap-2017-04-21-14h57m04s468.png"></span></p>
+style='font-size:12.0pt;font-family:"Times New Roman",serif'><div
+class="se-component se-image-container __se__float-center"
+contenteditable="false"
+>
+<figure style="margin: auto;">
+  <img
+    src="https://github.com/Aaryan-kapur/DOCHTML/blob/master/MEATLLURGICAL%20ENGINEERING%20AND%20MATERIAL%20SCIENCE/lec12%20FUNDAMENTALS%20OF%20MATERIAL%20PROCESSING%20-%20I%20corrected_files/image001.png?raw=true"
+    alt=""
+    data-rotate=""
+    data-proportion="true"
+    data-rotatex=""
+    data-rotatey=""
+    data-align="center"
+    data-size=","
+    data-percentage="auto,auto"
+    data-file-name="image012.png?raw=true"
+    data-file-size="0"
+    origin-size="384,288"
+    data-origin=","
+    style=""
+    data-index="12"
+  />
+</figure>
+</div></span></p>
 
 <p class=MsoNormal style='text-align:justify;text-justify:inter-ideograph;
 line-height:150%'><span lang=ta style='font-size:12.0pt;line-height:150%;
