--- a/ELECTRONICS AND COMMUNICATION ENGINEERING/language/electronics and communication engineering-telugu.htm
+++ b/ELECTRONICS AND COMMUNICATION ENGINEERING/language/electronics and communication engineering-telugu.htm
@@ -448,7 +448,7 @@ lang=te style='font-family:"Arial",sans-serif'> </span><span lang=te
 style='font-size:12.0pt;font-family:"Arial",sans-serif'>,(&#3128;&#3095;&#3103;&#3137;)</span></p>
 
 <p class=MsoNormal style='text-align:justify;line-height:normal'><span lang=te
-style='font-size:12.0pt;font-family:"Arial",sans-serif'>,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+style='font-size:12.0pt;font-family:"Arial",sans-serif'>,
 =</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
 position:relative;top:8.0pt'><img width=15 height=30
