--- a/ELECTRONICS AND COMMUNICATION ENGINEERING/language/electronics and communication engineering-bengali.htm
+++ b/ELECTRONICS AND COMMUNICATION ENGINEERING/language/electronics and communication engineering-bengali.htm
@@ -407,7 +407,7 @@ lang=bn style='font-family:"Arial",sans-serif'> </span><span lang=bn
 style='font-size:12.0pt;font-family:"Arial",sans-serif'>,(&#2455;&#2465;&#2492;)</span></p>
 
 <p class=MsoNormal style='text-align:justify;line-height:normal'><span lang=bn
-style='font-size:12.0pt;font-family:"Arial",sans-serif'>,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+style='font-size:12.0pt;font-family:"Arial",sans-serif'>,
 =</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
 position:relative;top:8.0pt'><img width=15 height=30
