--- a/ELECTRONICS AND COMMUNICATION ENGINEERING/language/electronics and communication engineering-gujarati.htm
+++ b/ELECTRONICS AND COMMUNICATION ENGINEERING/language/electronics and communication engineering-gujarati.htm
@@ -423,7 +423,7 @@ lang=gu style='font-family:"Arial",sans-serif'> </span><span lang=gu
 style='font-size:12.0pt;font-family:"Arial",sans-serif'>,(&#2744;&#2736;&#2759;&#2736;&#2750;&#2742;)</span></p>
 
 <p class=MsoNormal style='text-align:justify;line-height:normal'><span lang=gu
-style='font-size:12.0pt;font-family:"Arial",sans-serif'>,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+style='font-size:12.0pt;font-family:"Arial",sans-serif'>,
 =</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
 position:relative;top:8.0pt'><img width=15 height=30
