--- a/ELECTRONICS AND COMMUNICATION ENGINEERING/language/electronics and communication engineering-hindi.htm
+++ b/ELECTRONICS AND COMMUNICATION ENGINEERING/language/electronics and communication engineering-hindi.htm
@@ -437,7 +437,7 @@ lang=hi style='font-family:"Arial",sans-serif'> </span><span lang=hi
 style='font-size:12.0pt;font-family:"Arial",sans-serif'>,(&#2324;&#2360;&#2340;)</span></p>
 
 <p class=MsoNormal style='text-align:justify;line-height:normal'><span lang=hi
-style='font-size:12.0pt;font-family:"Arial",sans-serif'>,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+style='font-size:12.0pt;font-family:"Arial",sans-serif'>,
 =</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
 position:relative;top:8.0pt'><img width=15 height=30
