--- a/ELECTRONICS AND COMMUNICATION ENGINEERING/language/electronics and communication engineering-kannada.htm
+++ b/ELECTRONICS AND COMMUNICATION ENGINEERING/language/electronics and communication engineering-kannada.htm
@@ -455,7 +455,7 @@ lang=kn style='font-family:"Arial",sans-serif'> </span><span lang=kn
 style='font-size:12.0pt;font-family:"Arial",sans-serif'>,(&#3256;&#3248;&#3262;&#3256;&#3248;&#3263;)</span></p>
 
 <p class=MsoNormal style='text-align:justify;line-height:normal'><span lang=kn
-style='font-size:12.0pt;font-family:"Arial",sans-serif'>,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+style='font-size:12.0pt;font-family:"Arial",sans-serif'>,
 =</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
 position:relative;top:8.0pt'><img width=15 height=30
