--- a/ELECTRONICS AND COMMUNICATION ENGINEERING/language/electronics and communication engineering-malayalam.htm
+++ b/ELECTRONICS AND COMMUNICATION ENGINEERING/language/electronics and communication engineering-malayalam.htm
@@ -441,7 +441,7 @@ lang=ml style='font-family:"Arial",sans-serif'> </span><span lang=ml
 style='font-size:12.0pt;font-family:"Arial",sans-serif'>,(&#3382;&#3376;&#3390;&#3382;&#3376;&#3391;)</span></p>
 
 <p class=MsoNormal style='text-align:justify;line-height:normal'><span lang=ml
-style='font-size:12.0pt;font-family:"Arial",sans-serif'>,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+style='font-size:12.0pt;font-family:"Arial",sans-serif'>,
 =</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
 position:relative;top:8.0pt'><img width=15 height=30
