--- a/ELECTRONICS AND COMMUNICATION ENGINEERING/language/electronics and communication engineering-marathi.htm
+++ b/ELECTRONICS AND COMMUNICATION ENGINEERING/language/electronics and communication engineering-marathi.htm
@@ -464,7 +464,7 @@ lang=mr style='font-family:"Arial",sans-serif'> </span><span lang=mr
 style='font-size:12.0pt;font-family:"Arial",sans-serif'>,(&#2360;&#2352;&#2366;&#2360;&#2352;&#2368;)</span></p>
 
 <p class=MsoNormal style='text-align:justify;line-height:normal'><span lang=mr
-style='font-size:12.0pt;font-family:"Arial",sans-serif'>,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+style='font-size:12.0pt;font-family:"Arial",sans-serif'>,
 =</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
 position:relative;top:8.0pt'><img width=15 height=30
