--- a/ELECTRONICS AND COMMUNICATION ENGINEERING/language/electronics and communication engineering-tamil.htm
+++ b/ELECTRONICS AND COMMUNICATION ENGINEERING/language/electronics and communication engineering-tamil.htm
@@ -465,7 +465,7 @@ lang=ta style='font-family:"Arial",sans-serif'> </span><span lang=ta
 style='font-size:12.0pt;font-family:"Arial",sans-serif'>,(&#2970;&#2992;&#3006;&#2970;&#2992;&#3007;)</span></p>
 
 <p class=MsoNormal style='text-align:justify;line-height:normal'><span lang=ta
-style='font-size:12.0pt;font-family:"Arial",sans-serif'>,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+style='font-size:12.0pt;font-family:"Arial",sans-serif'>,
 =</span><span
 lang=AR-SA style='font-size:11.0pt;line-height:115%;font-family:"Arial",sans-serif;
 position:relative;top:8.0pt'><img width=15 height=30
